--- a/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
+++ b/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
@@ -13,19 +13,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_var = 12 + 1j"
+    "mi_var = 12 + 13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'Python 3.10.7 64-bit (microsoft store)' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'c:/Users/Administrador/AppData/Local/Microsoft/WindowsApps/python3.10.exe -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -2610,7 +2613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -2624,7 +2627,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f5f83275ee69d87b8221315355688642ba9d798c52e57f09be426c31a39c1344"
+   }
   }
  },
  "nbformat": 4,
